# NFSU2-OpenGL

./: .clang-format  CONTRIBUTING.md  LICENSE  README.md  meson.build
data/: camera_data.txt
include/: Camera.h  Car.h  Chassis.h  Colors.h  Door.h  Drum.h  FrontBumper.h  Garage.h  Garagem.h  Lamp.h  Menu.h  Platform.h  Poster.h  RearBumper.h  Shelf.h  Textura.h  Texture.h  Wheel.h  stb_image.h
src/: Camera.cpp  Car.cpp  Chassis.cpp  Door.cpp  Drum.cpp  FrontBumper.cpp  Garage.cpp  Garagem.cpp  Lamp.cpp  Menu.cpp  Platform.cpp  Poster.cpp  RearBumper.cpp  Shelf.cpp  Textura.cpp  Texture.cpp  Wheel.cpp  main.cpp  meson.build
